--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,14 @@
 :root {
   font-size: 14px;
 }
+
+.hide {
+  max-height: 0;
+  transition: max-height 1s ease-in-out;
+  overflow: hidden;
+}
+
+.hide.clicked {
+  max-height: 500px;
+  transition: max-height 1s ease-in-out;
+}
