--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -142,7 +142,7 @@ header {
   justify-content: center;
   flex-wrap: wrap;
   position: fixed;
-  height: auto;
+  height: 117px;
   transition: transform 200ms ease-in-out;
 }
 
